# P7_project

./: P7_functions.py  README.md  docker-compose.yaml  pyproject.toml
1_feature_engineering_cleaning/: Readme.md  cleaned_data_target.csv  cleaning.py  feature_engineering.py
2_model_selection/: metrics_comparison_custom_scorer.csv  metrics_comparison_roc_auc.csv  model_results_analysis.py  model_selection.py
3_models/: dummy_pipeline_none.joblib  lgbm_smote_pipeline_custom_scorer.joblib  lgbm_smote_pipeline_roc_auc.joblib  lgbm_unbalance_pipeline_custom_scorer.joblib  lgbm_unbalance_pipeline_roc_auc.joblib  lgbm_weight_pipeline_custom_scorer.joblib  lgbm_weight_pipeline_roc_auc.joblib  logreg_pipeline_custom_scorer.joblib  logreg_pipeline_roc_auc.joblib  xgb_pipeline_custom_scorer.joblib  xgb_pipeline_roc_auc.joblib  xgb_weight_pipeline_roc_auc.joblib
5_best_model_explicability/: lime_explainer_xgb  model_explicability.py  shap_explainer_xgb  shap_values_xgb
6_fastapi/: Dockerfile  main.py  requirements.txt
7_streamlit_dashboard/: Dockerfile  app.py  dashboard_functions.py  features_shap_values.csv  lime.html  lime_explainer_xgb  requirements.txt  shap_explainer_xgb  shap_values_xgb  xgb_weight_pipeline_custom_scorer.joblib
notebooks/: Data exploration before feature engineering.ipynb
