[tool.poetry]
name = "p7"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
lime = "^0.2.0"
jupyter = "^1.0.0"
imbalanced-learn = "^0.9.1"
lightgbm = "^3.3.3"
shap = "^0.41.0"
numba = "^0.56.4"
hyperopt = "^0.2.7"
statsmodels = "^0.13.5"
xgboost = "^1.7.1"
missingno = "^0.5.1"
llvmlite = "^0.39.1"
joblib = "^1.2.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"
fastapi = "^0.88.0"
altair = "^4.2.0"
pydantic = "^1.10.2"
dill = "^0.3.6"
scikit-learn = "^1.2.0"
sklearn = "^0.0.post1"
fpdf = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
jupyter-black = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
